--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,14 @@
   --primary-text-color: #757575;
   --title-text-color: #212121;
   --accent-color: #2196f3;
+  --main-backgr-color: #ffffff;
+  --special-backgr-color: #2f303a;
 }
 
 body {
+  font-family: "Roboto", sans-serif;
   color: var(--primary-text-color);
-  background-color: #ffffff;
+  background-color: var(--main-backgr-color);
 }
 
 .list {
@@ -27,7 +30,15 @@ body {
   text-decoration: none;
 }
 
+/* header */
+
 .logo {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
@@ -35,77 +46,157 @@ body {
   color: #000000;
 }
 
+.menu-nav,
+.contacts {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+
 /* меню навигации */
 
-.menu-nav .link {
+.link {
   color: var(--title-text-color);
 }
 
-.menu-nav .link:hover,
-.menu-nav .link:focus {
-  color: var(--accent-color);
-}
-
-.menu-nav .link.current {
-  color: var(--accent-color);
-}
-
-/* контакты */
-
-.contact .contact-link {
-  color: var(--primary-text-color);
-}
-
+.link:hover,
+.link:focus,
 .contact-link:hover,
 .contact-link:focus {
   color: var(--accent-color);
 }
 
+.current {
+  color: var(--accent-color);
+}
+
+/* контакты */
+
+.contact-link {
+  color: var(--primary-text-color);
+}
+
 /* секция шапка */
 
 .hero {
-  background-color: #2f303a;
+  background-color: var(--special-backgr-color);
+}
+
+.hero-title,
+.hero-btn {
+  color: #ffffff;
 }
 
 .hero-title {
-  color: #ffffff;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
 }
 
-.btn {
+.hero-btn {
   background-color: var(--accent-color);
-  color: #ffffff;
 }
 
-.btn:hover,
-.btn:focus {
+.hero-btn:hover,
+.hero-btn:focus {
   background-color: #188ce8;
+}
+
+.hero-btn {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
 }
 
 /* секции */
 
-.section-title,
-.team-title {
+.benefits-title,
+.work-title,
+.team-title,
+.team-name {
   color: var(--title-text-color);
+}
+
+.benefits-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.benefits-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+}
+
+.work-title,
+.team-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .team {
   background-color: #f5f4fa;
 }
 
+.team-name {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.team-prof {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 /* подвал */
 
 .footer {
-  background-color: #2f303a;
+  background-color: var(--special-backgr-color);
 }
 
-.logo-footer {
-  color: #ffffff;
-}
-
+.logo-footer,
 .location {
   color: #ffffff;
 }
 
-.link-footer {
+.footer-contacts,
+.location {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+}
+
+.footer-link {
   color: rgba(255, 255, 255, 0.6);
 }
