--- a/css/styles.css
+++ b/css/styles.css
@@ -12,34 +12,38 @@
   --accent-color: #2196f3;
   --main-backgr-color: #ffffff;
   --special-backgr-color: #2f303a;
+  --portfolio-backgr-color: #f5f4fa;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
   color: var(--primary-text-color);
   background-color: var(--main-backgr-color);
+
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+button {
+  font-family: inherit;
+  cursor: pointer;
 }
 
 .list {
   list-style: none;
 }
 
-.link,
-.contact-link,
-.logo {
-  text-decoration: none;
-}
-
 /* header */
 
 .logo {
+  color: var(--accent-color);
+  text-decoration: none;
+
   font-family: "Raleway", sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
+  line-height: 1.19;
 }
 
 .logo-header {
@@ -48,17 +52,14 @@ body {
 
 .menu-nav,
 .contacts {
-  font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
-/* меню навигации */
-
 .link {
   color: var(--title-text-color);
+  text-decoration: none;
 }
 
 .link:hover,
@@ -72,10 +73,9 @@ body {
   color: var(--accent-color);
 }
 
-/* контакты */
-
 .contact-link {
   color: var(--primary-text-color);
+  text-decoration: none;
 }
 
 /* секция шапка */
@@ -84,23 +84,25 @@ body {
   background-color: var(--special-backgr-color);
 }
 
-.hero-title,
-.hero-btn {
-  color: #ffffff;
-}
-
 .hero-title {
-  font-style: normal;
+  color: #ffffff;
+
   font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
+  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
 }
 
 .hero-btn {
+  color: #ffffff;
   background-color: var(--accent-color);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
 }
 
 .hero-btn:hover,
@@ -108,73 +110,60 @@ body {
   background-color: #188ce8;
 }
 
-.hero-btn {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-}
-
 /* секции */
 
-.benefits-title,
-.work-title,
-.team-title,
-.team-name {
-  color: var(--title-text-color);
-}
-
 .benefits-title {
-  font-style: normal;
+  color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
+  line-height: 1.14;
   text-transform: uppercase;
-}
-
-.benefits-text {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
 }
 
 .work-title,
 .team-title {
-  font-style: normal;
+  color: var(--title-text-color);
+
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.11;
   text-align: center;
-  letter-spacing: 0.03em;
 }
 
 .team {
-  background-color: #f5f4fa;
+  background-color: var(--portfolio-backgr-color);
 }
 
 .team-name {
-  font-style: normal;
+  color: var(--title-text-color);
+
   font-weight: 500;
   font-size: 16px;
-  line-height: 19px;
-  text-align: center;
-  letter-spacing: 0.03em;
+  line-height: 1.19;
 }
 
 .team-prof {
-  font-style: normal;
-  font-weight: 400;
   font-size: 16px;
-  line-height: 19px;
-  text-align: center;
+  line-height: 1.19;
+}
+
+/* портфолио */
+
+.filter-btn {
+  color: var(--title-text-color);
+  background-color: var(--portfolio-backgr-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
   letter-spacing: 0.03em;
+}
+
+.filter-btn:hover,
+.filter-btn:focus {
+  color: #ffffff;
+  background-color: var(--accent-color);
 }
 
 /* подвал */
@@ -192,9 +181,6 @@ body {
 .location {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
 }
 
 .footer-link {
