--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,24 @@ body {
   background-color: var(--accent-color);
 }
 
+.portfolio-link {
+  text-decoration: none;
+}
+
+.portfolio-title {
+  color: var(--title-text-color);
+
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio-text {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.88;
+}
+
 /* -------------------ПОДВАЛ------------------- */
 
 .footer {
